# veil

./: .gitignore  .npmrc  README.md  package-lock.json  package.json  railway.json
app/: .env.example  netlify.toml  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
app/scripts/: deploy-veilpay-alt.mjs  measure-shielded-tx-size-real.mjs  measure-shielded-tx-size.mjs  probe-fee-schedule.mjs  recover-nonce-pool.mjs
app/src/: middleware.ts
app/src/__tests__/: compliance-presets.test.ts  compliance-render.test.tsx  create-render.test.tsx  dashboard-render.test.tsx
app/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
app/src/components/: BatchProgress.tsx  CanvasBar.tsx  CipherAmount.tsx  ClaimProgressModal.tsx  ClientWalletMultiButton.tsx  ComplianceGrantForm.tsx  CreateModeSelector.tsx  CreatePageInner.tsx  DashboardList.tsx  DateGroupHeader.tsx  GrantList.tsx  IncomingInvoicesSection.tsx  IncomingPrivatePaymentsSection.tsx  InvoiceCanvasBar.tsx  InvoiceForm.tsx  InvoiceRow.tsx  InvoiceView.tsx  NewProductFlow.tsx  PaymentProgressModal.tsx  PayrollCanvasBar.tsx  PayrollCsvUploader.tsx  PayrollFlow.tsx  PayrollPublishingModal.tsx  PrimaryCta.tsx  PublishingModal.tsx  RefreshButton.tsx  RegistrationModal.tsx  RowOverflowMenu.tsx  SendGiftFlow.tsx  SlideOverPanel.tsx  StatusDot.tsx  VeilDescentMark.tsx  VeilLogo.tsx  WalletProvider.tsx  X25519HelpDialog.tsx
app/src/lib/: anchor.ts  arweave.ts  auditor-links.ts  constants.ts  csv.ts  encryption.ts  explorer.ts  gift-cards.ts  incoming-invoices-storage.ts  invoicePdf.tsx  invoice_registry.json  invoice_registry.ts  lock-derivation.ts  payInvoiceCpi.ts  payShieldedCpi.ts  payroll-claim-links.ts  payroll-runs-storage.ts  payrollPacketDownload.ts  payrollPacketPdf.tsx  payslipPdf.tsx  pdfDownload.ts  private-payroll.ts  products.ts  receipt.ts  received-payments-storage.ts  sdk-error.ts  shielded-pay.ts  types.ts  umbra-auditor.ts  umbra.ts  zk-asset-cache.ts
app/src/types/: qrcode-svg.d.ts
app/tests/: audit-devnet.md  e2e-devnet.md  e2e-receipt.md  encryption.test.ts  metadata.test.ts  noble-ed25519-imports.test.ts  umbra-imports.test.ts
docs/: demo-checklist.md  demo-script.md  deploy-checklist.md  roadmap.md  smoke-test.md  submissions.md  wow-features.md
programs/invoice-registry/: Anchor.toml  package.json
programs/veil-pay/: Anchor.toml  Cargo.toml  PROBE_PDA_SEEDS.md  package.json
programs/veil-pay/programs/veil-pay/: Cargo.toml
programs/veil-pay/programs/veil-pay/src/: lib.rs
programs/veil-pay/tests/: probe.ts  run.cjs  veil-pay.ts
programs/veil-pay/tests-rust/mock-umbra/: Cargo.toml
programs/veil-pay/tests-rust/mock-umbra/src/: lib.rs
(+81 files in other folders)
