[package]
name = "veil-pay"
version = "0.1.0"
description = "Veil's CPI wrapper for Umbra deposits — single-popup private payments"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "veil_pay"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "1.0.0-rc.5"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
