[package]
name = "mock-umbra"
version = "0.1.0"
description = "Test-only mock of the Umbra program — accepts any CPI from VeilPay and logs which discriminator was hit. Built for the veil-pay anchor test suite."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mock_umbra"

# We deliberately do NOT use Anchor's #[program] macro (see src/lib.rs for the
# rationale), but we still depend on anchor-lang to reuse its solana-program
# re-export and so this crate participates in the same anchor-build workspace
# as veil-pay. The idl-build feature is intentionally absent — there's no
# Anchor IDL to generate for a raw solana-program entrypoint.
[features]
default = []
no-entrypoint = []
# Stub idl-build feature so anchor's IDL build pass (which compiles each
# workspace member with `--features idl-build`) does not error out on this
# crate. We deliberately do NOT forward to anchor-lang's idl-build because
# this mock has no #[program] macro and emits no Anchor IDL.
idl-build = []
# The feature flags below are referenced by anchor-lang macros' check-cfg
# expansion; declaring them here silences "unexpected cfg" warnings.
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "1.0.0-rc.5"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
